--- a/client/components/Navbar.css
+++ b/client/components/Navbar.css
@@ -8,5 +8,31 @@
 
 html,body{
     overflow-x: hidden
+}
 
+
+.one{
+
+height: 25%;
+}
+
+
+.cards{
+    border-radius: 20px;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top-right-radius: 300px;
+    border-top-left-radius: 300px;
+}
+
+
+.shopping{
+    background-color:#de8d68;
+}
+
+.view{
+    text-decoration: none;
 }
